--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,19 +17,30 @@ else()
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+set(CMAKE_SKIP_BUILD_RPATH FALSE)
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE) #will include non-standard opencv location in installed rpath 
+
+set(INSTALL_LIBDIR "/usr/local/lib")
+set(INSTALL_INCLUDEDIR "/usr/local/include")
+
 set(HDRS
   include/DBoW2/BowVector.h           include/DBoW2/FBrief.h
   include/DBoW2/QueryResults.h        include/DBoW2/TemplatedDatabase.h   include/DBoW2/FORB.h
   include/DBoW2/DBoW2.h               include/DBoW2/FClass.h              include/DBoW2/FeatureVector.h
-  include/DBoW2/ScoringObject.h       include/DBoW2/TemplatedVocabulary.h)
+  include/DBoW2/ScoringObject.h       include/DBoW2/TemplatedVocabulary.h	include/DBoW2/Random.h
+  include/DBoW2/Timestamp.h
+  )
 set(SRCS 
-  src/BowVector.cpp     src/FBrief.cpp        src/FORB.cpp
-  src/FeatureVector.cpp src/QueryResults.cpp  src/ScoringObject.cpp)
+  src/BowVector.cpp     src/FBrief.cpp        src/FORB.cpp	src/Timestamp.cpp
+  src/FeatureVector.cpp src/QueryResults.cpp  src/ScoringObject.cpp	src/Random.cpp)
 
 set(DEPENDENCY_DIR ${CMAKE_CURRENT_BINARY_DIR}/dependencies)
 set(DEPENDENCY_INSTALL_DIR ${DEPENDENCY_DIR}/install)
 
-find_package(OpenCV REQUIRED)
+#find_package(OpenCV 3.1.0 REQUIRED PATHS /home/nvidia/Documents/opencv_build/share/OpenCV NO_DEFAULT_PATH)
+find_package(OpenCV 3.1.0 REQUIRED PATHS /home/cv-bhlab/Documents/Libraries/opencv/opencv_3_4/install/share/OpenCV NO_DEFAULT_PATH)
+#find_package(OpenCV 3.1.0 REQUIRED PATHS /home/brian/Documents/Libraries/opencv/3_4_13/install/share/OpenCV
+
 include_directories(${OpenCV_INCLUDE_DIRS})
 
 if(BUILD_DBoW2)
@@ -52,10 +63,11 @@ endif(BUILD_Demo)
 
 configure_file(src/DBoW2.cmake.in
   "${PROJECT_BINARY_DIR}/DBoW2Config.cmake" @ONLY)
+  
 
-install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+install(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_LIBDIR})
 if(BUILD_DBoW2)
-  install(DIRECTORY include/DBoW2 DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
+  install(DIRECTORY include/DBoW2 DESTINATION ${INSTALL_INCLUDEDIR})
 endif()
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/DBoW2Config.cmake"
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME})
